# forwarding

./: .clang-format  CMakeLists.txt  main.c
dotenv/: CMakeLists.txt  dotenv.h
dotenv/include/: api.h
dotenv/src/: load.c
include/: general.h  macros.h
scripts/: build.sh  init_build_dir.sh  install.sh  rebuild.sh
src/: general.c
